manifests/03-api-gateway/deployment-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-api-gateway
  namespace: llmops
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-container
        image: llm-gateway:local # Docker Hub 대신 로컬 빌드 이미지 태그 명시
        imagePullPolicy: IfNotPresent # 반드시 명시하여 로컬 주입 이미지를 탐색하게 함
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
