manifests/03-api-gateway/service-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api-gateway
  namespace: llmops
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: api-gateway
  type: ClusterIP
